Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11740

Incorrect results for partitioned Iceberg V2 tables when runtime filters are applied

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.2.0
    • None

    Description

      If an Iceberg V2 table is partitioned, and contains delete files, then in a query that involves runtime filters on the partition columns return empty result set.

      select count(*) from store_sales, date_dim where d_date_sk = ss_sold_date_sk and d_moy=2 and d_year=1998;
      

      In the above query store_sales is partitioned by ss_sold_date_sk which will be filtered by runtime filters created by the JOIN. If store_sales has delete files then the above query returns empty result set.

      Attachments

        Activity

          People

            boroknagyz Zoltán Borók-Nagy
            boroknagyz Zoltán Borók-Nagy
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: